# CppTests

./: CMakeLists.txt
include/lib/: library.h
src/: library.cpp
test/: LibraryTest.cpp  OptionalTest.cpp  ReturnCharStarTest.cpp  UnionTest.cpp
